add riscv-linux and riscv-glibc

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,11 @@
 	path = riscv/riscv-isa-sim
 	url = https://github.com/chiache/riscv-isa-sim.git
 	branch = cache_trace
+[submodule "riscv/riscv-glibc"]
+	path = riscv/riscv-glibc
+	url = https://github.com/chiache/riscv-glibc.git
+	branch = riscv-glibc-2.26
+[submodule "riscv/riscv-linux"]
+	path = riscv/riscv-linux
+	url = https://github.com/chiache/riscv-linux.git
+	branch = firesim
